--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@pusher/push-notifications-web": "^1.1.0",
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "laravel-echo": "^2.0.0",
+        "pusher-js": "^8.4.0"
     }
 }
